--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "startProxy": "ng serve --proxy-config src/proxy.conf.js",
+    "startProxyNetwork": "ng serve --host 0.0.0.0 --proxy-config src/proxy.conf.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
