--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "scripts": [
+              "./public/safariPolyfills.js"
+            ],
             "webWorkerTsConfig": "tsconfig.worker.json"
           },
           "configurations": {
