--- a/client/package.json
+++ b/client/package.json
@@ -24,20 +24,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "21.0.6",
-    "@angular/compiler": "21.0.6",
-    "@angular/core": "^21.0.6",
-    "@angular/forms": "^21.0.6",
-    "@angular/platform-browser": "^21.0.6",
-    "@angular/router": "^21.0.6",
+    "@angular/compiler": "21.1.0-rc.0",
+    "@angular/core": "^21.1.0-rc.0",
+    "@angular/forms": "^21.1.0-rc.0",
+    "@angular/platform-browser": "^21.1.0-rc.0",
+    "@angular/router": "^21.1.0-rc.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.4",
-    "@angular/cli": "^21.0.4",
-    "@angular/compiler-cli": "^21.0.6",
+    "@angular/build": "^21.1.0-rc.0",
+    "@angular/cli": "^21.1.0-rc.0",
+    "@angular/compiler-cli": "^21.1.0-rc.0",
     "@types/jasmine": "~5.1.0",
+    "baseline-browser-mapping": "^2.9.14",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
