--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "^21.1.0-rc.0",
     "@angular/compiler-cli": "^21.1.0-rc.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^25.2.3",
     "baseline-browser-mapping": "^2.9.14",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
